add description to pizza link

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Homemade Pepperoni Pizza</h1>
+    <img src="../images/pizza.jpg" alt="delicious pepperoni pizza with cheese">
+    <h3>Description</h3>
+        <p>Quick, Easy and Delicious-Homemade pizza crust and tomato sauce has never been easier-and this recipe for pepperoni pizza produces a delicious classic!</p>
+        
 </body>
 </html>
