--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,8 +9,33 @@
 <body>
     <h1>Homemade Pepperoni Pizza</h1>
     <img src="../images/pizza.jpg" alt="delicious pepperoni pizza with cheese">
-    <h3>Description</h3>
+    <h2>Description</h2>
         <p>Quick, Easy and Delicious-Homemade pizza crust and tomato sauce has never been easier-and this recipe for pepperoni pizza produces a delicious classic!</p>
-        
+    <h3>Ingredients</h3>
+        <h4>Contadina Quck Pizza Sauce</h4>
+        <ul>
+            <li>12 ounce can CONTADINA Tomato Paste</li>
+            <li>1 teaspoon dried basil, crushed</li>
+            <li>1 teaspoon dried oregano, crushed</li>
+            <li>1/2 teaspoon garlic powder</li>
+            <li>1/2 teaspoon onion powder</li>
+            <li>1/2 teaspoon sugar</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1/4 teaspoon black pepper</li>
+        </ul>
+        <h4>Fleischmanns Easy Pizza Crust</h4>
+        <ul>
+            <li>3 & 1/4 cups all-purpose flour, or more as needed</li>
+            <li>2 (.25 ounce) envelopes FLEISCHMANN'S Pizza Crust Yeast or RapidRise Yeast</li>
+            <li>1 tablespoon sugar</li>
+            <li>1 & 1/2 teaspoons salt</li>
+            <li>1 & 1/3 cups very warm water(120 degrees F to 130 degrees F)</li>
+            <li>1/3 cup oil</li>
+        </ul>
+        <h4>Toppings</h4>
+        <ul>
+            <li>1 package HORMEL Pepperoni</li>
+            <li>1 cup shredded mozzarella cheese, or more to taste</li>
+        </ul>
 </body>
 </html>
