--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Homemade Pepperoni Pizza</a>
+    <ul>
+       <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
+       <li><a href="recipes/cereal.html">Fruity Pebbles Cereal</a></li>
+    </ul>
 
 
 </body>
