--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
        <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
        <li><a href="recipes/cereal.html">Fruity Pebbles Cereal</a></li>
+       <li><a href="recipes/water.html">Tap Water</a></li>
     </ul>
 
 
