add 'back to all recipes' link in cereal,pizza, and water recipes

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -45,7 +45,7 @@
             <li>Divide dough in half. Pat each half (with floured hands) into a 12-inch greased pizza pan OR roll dough to fit pans.</li>
             <li>For pizzas: Preheat oven to 425 degrees F. Top crusts with sauce, pepperoni and cheese.</li>
             <li>Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</li>
-            
         </ol>
+    <a href="../index.html">Back to All Odin Recipes</a>
 </body>
 </html>
