--- a/recipes/cereal.html
+++ b/recipes/cereal.html
@@ -25,5 +25,6 @@
             <li>Get your Spoon and dip into your bowl</li>
             <li>Enjoy!</li>
         </ol>
+    <a href="../index.html">Back to All Odin Recipes</a>
 </body>
 </html>
