--- a/recipes/water.html
+++ b/recipes/water.html
@@ -26,6 +26,6 @@
         <li>Use paper towels to mop up any spillage</li>
         <li>Enjoy!</li>
     </ol>
-    
+    <a href="../index.html">Back to All Odin Recipes</a>
 </body>
 </html>
