--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/recipelogo.jpg" alt="image with text reading recipes over a black square background">
     <ul>
        <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
        <li><a href="recipes/cereal.html">Fruity Pebbles Cereal</a></li>
        <li><a href="recipes/water.html">Tap Water</a></li>
     </ul>
-
 
 </body>
 </html>
