add em tag and strong tag to pizza recipe page

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,11 +10,11 @@
     <h1>Homemade Pepperoni Pizza</h1>
     <img src="../images/pizza.jpg" alt="delicious pepperoni pizza with cheese">
     <h2>Description</h2>
-        <p>Quick, Easy and Delicious-Homemade pizza crust and tomato sauce has never been easier-and this recipe for pepperoni pizza produces a delicious classic!</p>
+        <p>Quick, Easy and <em>Delicious</em>-Homemade pizza crust and tomato sauce has never been easier-and this recipe for pepperoni pizza produces a delicious classic!</p>
     <h3>Ingredients</h3>
         <h4>Contadina Quck Pizza Sauce</h4>
         <ul>
-            <li>12 ounce can CONTADINA Tomato Paste</li>
+            <li>12 ounce can <strong>CONTADINA</strong> Tomato Paste</li>
             <li>1 teaspoon dried basil, crushed</li>
             <li>1 teaspoon dried oregano, crushed</li>
             <li>1/2 teaspoon garlic powder</li>
@@ -26,7 +26,7 @@
         <h4>Fleischmanns Easy Pizza Crust</h4>
         <ul>
             <li>3 & 1/4 cups all-purpose flour, or more as needed</li>
-            <li>2 (.25 ounce) envelopes FLEISCHMANN'S Pizza Crust Yeast or RapidRise Yeast</li>
+            <li>2 (.25 ounce) envelopes <strong>FLEISCHMANN'S</strong> Pizza Crust Yeast or RapidRise Yeast</li>
             <li>1 tablespoon sugar</li>
             <li>1 & 1/2 teaspoons salt</li>
             <li>1 & 1/3 cups very warm water(120 degrees F to 130 degrees F)</li>
@@ -34,7 +34,7 @@
         </ul>
         <h4>Toppings</h4>
         <ul>
-            <li>1 package HORMEL Pepperoni</li>
+            <li>1 package <strong>HORMEL</strong> Pepperoni</li>
             <li>1 cup shredded mozzarella cheese, or more to taste</li>
         </ul>
     <h3>Steps</h3>
