add styles to body, img, and ul

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>My Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <img src="images/recipelogo.jpg" alt="image with text reading recipes over a black square background">
+    <p></p>
     <ul>
-       <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
-       <li><a href="recipes/cereal.html">Fruity Pebbles Cereal</a></li>
-       <li><a href="recipes/water.html">Tap Water</a></li>
+       <li class="pizza"><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
+       <li class="cereal"><a href="recipes/cereal.html">Fruity Pebbles Cereal</a></li>
+       <li class="water"><a href="recipes/water.html">Tap Water</a></li>
     </ul>
 
 </body>
